# rsomics-vcf-annotate

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs  smoke.rs
tests/golden/: regions.bed  small.vcf
