[package]
name = "rsomics-vcf-annotate"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
description = "Annotate VCF variants with labels from a BED/TSV file"

[[bin]]
name = "rsomics-vcf-annotate"
path = "src/main.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

